--- a/redirect/Scuola/static/css/scuola.css
+++ b/redirect/Scuola/static/css/scuola.css
@@ -5,86 +5,123 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-    overflow: hidden;
 }
 
 body {
+    background-color: #c4c4c4;
+}
+
+.menu {
+    width: 100%;
+    height: 10vh;
+    background: rgb(100, 100, 100);
+    vertical-align: middle;
+    text-align: right;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0);
+}
+
+.options ul {
+    display: flex;
+    justify-content: right;
+    padding-top: 1.8%;
+}
+
+li {
+    list-style: none;
+}
+
+.options a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: all 0.2s;
+}
+
+.options a:hover {
+    color: black;
+    background-color: #fff;
+    text-align: center;
+}
+
+.about {
+    display: none;
+    width: 15%;
+    background-color: #797979;
+    border: 2px solid rgb(24, 24, 24);
+    border-radius: 5px;
+    position: absolute;
+    top: 10%;
+    right: 0;
+}
+
+.about p, .about a {
     display: flex;
     justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #23242a;
 }
 
-.box {
-    position: relative;
-    width: 29.8%;
-    min-height: 63vh;
-    background-color: #1c1c1c;
-    border-radius: 8px;
+.about-me {
+    display: block;
 }
 
-.box::before {
-    content: "";
+.logo {
     position: absolute;
-    top: -50%;
-    left: -50%;
+    top: 7px;
+    left: 0;
+}
+
+.logo img {
+    border-radius: 100px;
+    width: 70%;
+    border: 2px solid rgb(133, 133, 133);
+}
+
+.exercises {
+    width: 20%;
+    margin-top: 6%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.exercises ul li {
+    border: 2px solid blue;
     width: 100%;
-    height: 63vh;
-    background: linear-gradient(0deg, transparent, #9332a8, #401f47);
-    transform-origin: bottom right;
-    animation: animate 6s linear infinite;
+    margin: 5px;
+    border-radius: 6px;
+    padding: 10px;
 }
 
-.box::after {
-    content: "";
-    position: absolute;
-    top: -50%;
-    left: -50%;
+.exercises ul li a {
     width: 100%;
-    height: 63vh;
-    background: linear-gradient(0deg, transparent, #9332a8, #401f47);
-    transform-origin: bottom right;
-    animation: animate 6s linear infinite;
-    animation-delay: -3s;
 }
 
-@keyframes animate {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
+.exercises ul li img {
+    width: 25px;
 }
 
-.form {
-    position: absolute;
-    inset: 2px;
-    border-radius: 8px;
-    background-color: #28292d;
-    z-index: 10;
-    padding: 13% 10%;
+.exercises ul li {
     display: flex;
-    flex-direction: column;
 }
 
-a {
-    text-decoration: None;
-    font-weight: 600;
-    color: #9332a8;
-    transition: all 0.5s;
+.about {
+    display: none;
+    width: 15%;
+    background-color: #797979;
+    border: 2px solid rgb(24, 24, 24);
+    border-radius: 5px;
+    transition: all 2s;
 }
 
-a:hover {
-    font-size: 20px;
-    color: #efefef;
+.about p, .about a {
+    display: flex;
+    justify-content: center;
 }
 
-ul li:last-child {
-    position: absolute;
-    bottom: 10px;
+.about-me {
+    display: block;
 }
 
 
