--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -7,25 +7,31 @@
     font-family: "Poppins", sans-serif;
 }
 
+body {
+    background-color: #c4c4c4;
+}
+
 .menu {
     width: 100%;
-    height: 20vh;
-    background: rgb(2, 255, 2);
+    height: 10vh;
+    background: rgb(100, 100, 100);
+    vertical-align: middle;
+    text-align: right;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0);
 }
 
-.menu ul li {
-    display: inline-block;
-    text-align: center;
-}
-
-ul {
-    padding: 10px 20px;
+.options ul {
     display: flex;
-    justify-content: flex-end;
-    padding-top: 3.6%;
+    justify-content: right;
+    padding-top: 1.8%;
 }
 
-a {
+li {
+    list-style: none;
+}
+
+.options a {
     color: #fff;
     text-decoration: none;
     margin-right: 10px;
@@ -34,7 +40,7 @@ a {
     transition: all 0.2s;
 }
 
-a:hover {
+.options a:hover {
     color: black;
     background-color: #fff;
     text-align: center;
@@ -46,9 +52,35 @@ a:hover {
     background-color: #797979;
     border: 2px solid rgb(24, 24, 24);
     border-radius: 5px;
-    transition: all 2s;
+    position: absolute;
+    top: 10%;
+    right: 0;
+}
+
+.about p, .about a {
+    display: flex;
+    justify-content: center;
 }
 
 .about-me {
     display: block;
+}
+
+.logo {
+    position: absolute;
+    top: 7px;
+    left: 0;
+}
+
+.logo img {
+    border-radius: 100px;
+    width: 70%;
+    border: 2px solid rgb(133, 133, 133);
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    margin-top: 15%;
+    font-size: 4vw;
 }
