--- a/redirect/Scuola/static/css/scuola.css
+++ b/redirect/Scuola/static/css/scuola.css
@@ -73,10 +73,20 @@ li {
     left: 0;
 }
 
-.logo img {
+form {
+    margin-left: 30%;
+}
+
+button {
+    border-radius: 100px;   
+    background-color: transparent;
+    border: none;
+}
+
+button img {
+    width: 65%;
     border-radius: 100px;
-    width: 70%;
-    border: 2px solid rgb(133, 133, 133);
+    border: 2px solid #d6d4d4;
 }
 
 .exercises {
