--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -19,12 +19,20 @@ body {
     text-align: right;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0);
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.options {
+    margin-right: 10px;
 }
 
 .options ul {
     display: flex;
-    justify-content: right;
-    padding-top: 1.8%;
 }
 
 li {
@@ -34,14 +42,14 @@ li {
 .options a {
     color: #fff;
     text-decoration: none;
-    margin-right: 10px;
-    padding: 10px;
+    margin-right: 15px;
+    padding: 5%;
     border-radius: 5px;
     transition: all 0.5s;
 }
 
 .options a:hover {
-    font-size: 20px;
+    font-size: 1.4vw;
     color: black;
     background-color: #fff;
     text-align: center;
@@ -73,10 +81,20 @@ li {
     left: 0;
 }
 
-.logo img {
+form {
+    margin-left: 30%;
+}
+
+button {
+    border-radius: 100px;   
+    background-color: transparent;
+    border: none;
+}
+
+button img {
+    width: 65%;
     border-radius: 100px;
-    width: 70%;
-    border: 2px solid rgb(133, 133, 133);
+    border: 2px solid #d6d4d4;
 }
 
 h1 {
@@ -84,4 +102,77 @@ h1 {
     justify-content: center;
     margin-top: 15%;
     font-size: 4vw;
+}
+
+.notification {
+    margin-right: 5%;
+    border: none;
+    position: relative;
+}
+
+.notification::after {
+    content: "0";
+    border-radius: 10px;
+    width: 2%;
+    height: 2.2vh;
+    background-color: red;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    font-size: 0.8vw;
+    color: #fff;
+}
+
+.notification a img {
+    width: 4%
+}
+
+.width-animation {
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    transition: width 2s;
+}
+
+#window-notification {
+    display: none;
+    flex-direction: column;
+    background-color: rgb(92, 92, 92);
+    width: 15%;
+    height: 40vh;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    justify-content: center;
+}
+
+#window-notification p {
+    margin-top: 3px;
+    color: #fff;
+    text-align: center;
+}
+
+.message-box {
+    overflow-y: auto;
+    width: 90%;
+    height: 90%;
+    border: 2px solid rgb(129, 129, 129);
+    margin: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.message-box p {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid rgb(139, 139, 139);
+    border-radius: 5px;
+}
+
+span {
+    display: block;
+    font-size: 0.6vw;
 }
