--- a/redirect/Scuola/TPSI/static/css/tpsi.css
+++ b/redirect/Scuola/TPSI/static/css/tpsi.css
@@ -19,12 +19,20 @@ body {
     text-align: right;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0);
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.options {
+    margin-right: 10px;
 }
 
 .options ul {
     display: flex;
-    justify-content: right;
-    padding-top: 1.8%;
 }
 
 li {
@@ -34,14 +42,14 @@ li {
 .options a {
     color: #fff;
     text-decoration: none;
-    margin-right: 10px;
-    padding: 10px;
+    margin-right: 15px;
+    padding: 5%;
     border-radius: 5px;
     transition: all 0.5s;
 }
 
 .options a:hover {
-    font-size: 20px;
+    font-size: 1.4vw;
     color: black;
     background-color: #fff;
     text-align: center;
@@ -84,9 +92,19 @@ button {
 }
 
 button img {
-    width: 65%;
+    width: 4.5vw;
     border-radius: 100px;
     border: 2px solid #d6d4d4;
+}
+
+form {
+    margin-left: 30%;
+}
+
+button {
+    border-radius: 100px;   
+    background-color: transparent;
+    border: none;
 }
 
 
