--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -1,190 +1,194 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap');
+@font-face {
+    font-family: "Nebula";
+    src: url(../font/NEBULA-REGULAR.woff2);
+}
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
 }
 
 body {
-    background-color: #c4c4c4;
+    background-color: rgb(37, 37, 37);
+    overflow: hidden;
 }
 
-.menu {
+.context-menu {
+    display: flex;
+    justify-content: right;
+    align-items: center;
     width: 100%;
     height: 10vh;
-    background: rgb(100, 100, 100);
-    vertical-align: middle;
-    text-align: right;
-    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0); 
-    box-shadow: 0px 10px 13px -7px #000000, 5px 6px 32px 2px rgba(0,0,0,0);
-    display: flex;
-    align-items: center;
-    justify-content: right;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -100%;
+    transition: all 0.3s;
+    z-index: 10;
 }
 
 .options {
-    margin-right: 10px;
-}
-
-.options ul {
-    display: flex;
-}
-
-li {
-    list-style: none;
+    padding: 20px;
 }
 
 .options a {
-    color: #fff;
     text-decoration: none;
-    margin-right: 15px;
-    padding: 5%;
-    border-radius: 5px;
-    transition: all 0.5s;
+    padding: 0px 20px;
+    font-family: "Titillium Web";
+    font-weight: 600;
+    color: #00FFC3;
 }
 
-.options a:hover {
-    font-size: 1.4vw;
-    color: black;
-    background-color: #fff;
-    text-align: center;
-}
-
-.about {
-    display: none;
-    width: 15%;
-    background-color: #797979;
-    border: 2px solid rgb(24, 24, 24);
-    border-radius: 5px;
-    position: absolute;
-    top: 10%;
-    right: 0;
-}
-
-.about p, .about a {
-    display: flex;
-    justify-content: center;
-}
-
-.about-me {
-    display: block;
-}
-
-.logo {
-    position: absolute;
-    top: 7px;
+#image {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../images/light-bulb-in-the-dark.jpg);
+    background-size: cover;
+    position: fixed;
+    top: 0;
     left: 0;
+    z-index: 9999;
 }
 
-form {
-    margin-left: 30%;
-}
-
-button {
-    border-radius: 100px;   
-    background-color: transparent;
-    border: none;
-}
-
-button img {
-    width: 4.5vw;
-    border-radius: 100px;
-    border: 2px solid #d6d4d4;
-}
-
-h1 {
-    display: flex;
-    justify-content: center;
+.content {
+    width: 100%;
+    color: #fff;
     margin-top: 15%;
-    font-size: 4vw;
-}
-
-.notification {
-    margin-right: 5%;
-    border: none;
     position: relative;
 }
 
-.notification::after {
-    content: attr(data);
+.Lorem {
+    font-family: "Nebula";
+    font-size: 3vw;
+    width: 50%;
+    position: absolute;
+    left: -100%;
+    z-index: 4;
+    text-align: center;
+}
+
+#notifications img {
+    width: 2vw;
+}
+
+#notifications {
+    width: 2vw;
+    position: relative;
+}
+
+#notifications::after {
+    content: attr(index);
     border-radius: 10px;
-    width: 0.8vw;
-    height: 1.5vh;
+    width: 50%;
+    height: auto;
     background-color: red;
     position: absolute;
     top: 0;
     right: 0;
-    text-align: center;
-    font-size: 0.5vw;
+    font-size: 0.9vw;
     color: #fff;
+    text-align: center;
 }
 
-.notification a img {
-    width: 4%
-}
-
-.width-animation {
-    width: 10px;
-    height: 10px;
-    background-color: #fff;
-    transition: width 2s;
-}
-
-.window-notification {
+#message-box {
+    width: 10%;
+    height: 25vh;
+    border: 2px solid #22c09b;
+    background-color: rgb(37, 37, 37);
+    z-index: 11;
+    border-radius: 5px;
     display: none;
-    flex-direction: column;
-    background-color: rgb(92, 92, 92);
-    width: 15%;
-    height: 40vh;
-    border-radius: 5px;
-    border: 2px solid #fff;
     justify-content: center;
+    font-family: "Titillium Web";
+    color: #22c09b;
+    font-weight: 600;
+    flex-direction: column;
 }
 
-.window-notification p {
-    margin-top: 3px;
-    color: #fff;
+#message-box p {
     text-align: center;
 }
 
-.message-box {
-    overflow-y: auto;
+#message-content-box {
+    display: block;
+    border: 2px solid #22c09b;
+    height: 80%;
     width: 90%;
-    height: 90%;
-    border: 2px solid rgb(129, 129, 129);
-    margin: 10px;
+    margin: auto;
     border-radius: 5px;
+}
+
+.title {
+    width: 100%;
+    height: 10vh;
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    align-items: center;
 }
 
-.message-box p {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid rgb(139, 139, 139);
-    border-radius: 5px;
-}
-
-span {
-    display: block;
-    font-size: 0.6vw;
-}
-
-.showHide-window-notification {
-    display: flex;
-}
-
-.centered-window-notification {
+.title h1 {
+    font-size: 3vw;
+    font-family: "Nebula";
+    color: rgb(175, 175, 175);
     position: fixed;
-    display: block;
-    width: 200px;
-    top: 0;
-    left: 0;
+    top: -100%;
+    z-index: 12;
+    transition: all 5s;
+}
+
+.nothing {
+    color: rgb(134, 134, 134);
+}
+
+.shadow-in {
+    -webkit-box-shadow: 5px 5px 5px 0px #00FFC3, inset 4px 4px 15px 0px #00FFC3, 5px 5px 47px 16px rgba(0,0,0,0); 
+    box-shadow: 5px 5px 5px 0px #00FFC3, inset 4px 4px 15px 0px #00FFC3, 5px 5px 47px 16px rgba(0,0,0,0);
+}
+
+/* ---------------------------------- ScrollBar ---------------------------------- */
+
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+
+
+/* ---------------------------------- Animations ---------------------------------- */
+
+.options a:hover {
+    color: #22c09b;
+}
+
+#image:hover {
+    background-color: #fff;
 }
