--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -14,6 +14,10 @@ body {
     overflow: hidden;
 }
 
+.hamburger {
+    display: none;
+}
+
 .context-menu {
     display: flex;
     justify-content: right;
