--- a/redirect/Scuola/Informatica/static/css/Info.css
+++ b/redirect/Scuola/Informatica/static/css/Info.css
@@ -19,7 +19,7 @@ body {
     justify-content: right;
     align-items: center;
     width: 100%;
-    height: 10vh;
+    height: 80px;
     position: fixed;
     top: 0;
     left: 0%;
@@ -67,6 +67,10 @@ body {
     margin-bottom: 15px;
     border: 2px solid #00FFC3;
     border-radius: 5px;
+}
+
+.hamburger {
+    display: none;
 }
 
 #notifications img {
@@ -135,6 +139,7 @@ body {
     position: fixed;
     top: 0%;
     z-index: 12;
+    margin-top: 15px;
     transition: all 5s;
 }
 
