--- a/redirect/Scuola/TPSI/static/css/TPSI.css
+++ b/redirect/Scuola/TPSI/static/css/TPSI.css
@@ -11,7 +11,11 @@
 
 body {
     background-color: rgb(37, 37, 37);
-    overflow: hidden;
+    overflow: show;
+}
+
+.hamburger {
+    display: none;
 }
 
 .context-menu {
@@ -19,7 +23,7 @@ body {
     justify-content: right;
     align-items: center;
     width: 100%;
-    height: 10vh;
+    height: 80px;
     position: fixed;
     top: 0;
     left: 0%;
@@ -136,6 +140,7 @@ body {
     top: 0%;
     z-index: 12;
     transition: all 5s;
+    margin-top: 15px;
 }
 
 .nothing {
