--- a/redirect/Scuola/static/css/Scuola.css
+++ b/redirect/Scuola/static/css/Scuola.css
@@ -19,7 +19,7 @@ body {
     justify-content: right;
     align-items: center;
     width: 100%;
-    height: 10vh;
+    height: 80px;
     position: fixed;
     top: 0;
     left: 0%;
@@ -125,7 +125,7 @@ body {
     height: 10vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;    
 }
 
 .title h1 {
@@ -136,6 +136,7 @@ body {
     top: 0%;
     z-index: 12;
     transition: all 5s;
+    margin-top: 15px;
 }
 
 .nothing {
