--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -119,6 +119,8 @@ body {
     color: #22c09b;
     font-weight: 600;
     flex-direction: column;
+    -webkit-box-shadow: 5px 5px 15px 5px #000; 
+    box-shadow: 5px 5px 15px 5px #000000;
 }
 
 #message-box p {
@@ -171,6 +173,8 @@ body {
     height: 150px;
     position: absolute;
     background-color: #333333;
+    -webkit-box-shadow: 5px 5px 15px 5px #000; 
+    box-shadow: 5px 5px 15px 5px #000000;
 }
 
 .about p {
