--- a/static/css/Query.css
+++ b/static/css/Query.css
@@ -77,6 +77,13 @@
     #message-box {
         height: 250px;
     }
+
+    .about {
+        width: 150px;
+        z-index: 12;
+        -webkit-box-shadow: 5px 5px 15px 5px #000; 
+        box-shadow: 5px 5px 15px 5px #000000;
+    }
 }
 
 
@@ -84,10 +91,17 @@
 @media only screen and (max-width: 1000px) {
     #title {
         margin-top: 15px;
-        font-size: 35px;
+        font-size: 5vw;
     }
 
     .content {
         margin-top: 20vh;
+    }
+
+    .options {
+        background-color: rgb(37, 37, 37);
+        border: 2px solid #00FFC3;
+        -webkit-box-shadow: 5px 5px 15px 5px #000; 
+        box-shadow: 5px 5px 15px 5px #000000;
     }
 }
