--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color: rgb(37, 37, 37);
+    background-color: #000;
     overflow: hidden;
 }
 
@@ -26,7 +26,7 @@ body {
     height: 80px;
     position: fixed;
     top: 0;
-    left: -37%;
+    left: -110%;
     transition: all 0.3s;
     z-index: 10;
 }
@@ -55,6 +55,7 @@ body {
     left: 0;
     z-index: 9999;
 }
+
 
 .content {
     width: 100%;
