--- a/redirect/Scuola/Informatica/static/css/Info.css
+++ b/redirect/Scuola/Informatica/static/css/Info.css
@@ -15,6 +15,7 @@ body {
 }
 
 .context-menu {
+    background-color: rgb(37, 37, 37);
     display: flex;
     justify-content: right;
     align-items: center;
@@ -126,20 +127,19 @@ body {
 
 .title {
     width: 100%;
-    height: 10vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .title h1 {
-    font-size: 3vw;
+    font-size: 60px;
     font-family: "Nebula";
     color: rgb(175, 175, 175);
     position: fixed;
-    top: -1vh;
+    top: 0.4vh;
     z-index: 12;
-    margin-top: 15px;
     transition: all 5s;
 }
 
