--- a/redirect/Scuola/static/css/Scuola.css
+++ b/redirect/Scuola/static/css/Scuola.css
@@ -74,24 +74,25 @@ body {
 }
 
 #notifications img {
-    width: 1.5vw;
+    width: 20px;
 }
 
 #notifications {
-    width: 1.5vw;
+    width: 20px;
     position: relative;
+    /*left: -35%;*/
 }
 
 #notifications::after {
     content: attr(index);
     border-radius: 10px;
     width: 50%;
-    height: auto;
+    height: 50%;
     background-color: red;
     position: absolute;
     top: 0;
     right: 0;
-    font-size: 0.9vw;
+    font-size: 70%;
     color: #fff;
     text-align: center;
 }
@@ -126,21 +127,20 @@ body {
 
 .title {
     width: 100%;
-    height: 10vh;
+    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
 }
 
 .title h1 {
-    font-size: 3vw;
+    font-size: 60px;
     font-family: "Nebula";
     color: rgb(175, 175, 175);
     position: fixed;
-    top: -0.5vh;
+    top: 0.4vh;
     z-index: 12;
     transition: all 5s;
-    margin-top: 15px;
 }
 
 .nothing {
