--- a/redirect/Scuola/TPSI/Color Picker/static/css/style.css
+++ b/redirect/Scuola/TPSI/Color Picker/static/css/style.css
@@ -67,8 +67,8 @@ span {
     border-radius: 10px;
 }
 
-.show-border {
-    border: 3px solid black;
+.reset-border {
+    border: 1px solid black;
 }
 
 .red {
