--- a/redirect/Scuola/TPSI/Tris/static/css/tris.css
+++ b/redirect/Scuola/TPSI/Tris/static/css/tris.css
@@ -47,7 +47,7 @@
     text-align: center;
 }
 
-.game {
+.game, .singleplayer {
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -81,6 +81,10 @@
     width: 30px;
     height: 30px;
     background-size: cover;
+}
+
+.volume p {
+    color: #fff;
 }
 
 .settings-box {
@@ -195,6 +199,31 @@
     background-image: url(../images/social/discord.svg);
 }
 
+#sp {
+    display: none;
+}
+
+.difficulty {
+    position: absolute;
+    width: 50%;
+    height: 300px;
+    background-image: url(../images/background/stone.jpg);
+    background-size: cover;
+    -webkit-box-shadow: 0px 0px 14px 1px #000000; 
+    box-shadow: 0px 0px 14px 1px #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;   
+    color: #fff;
+}
+
+.difficulty-selector {
+    margin-top: 20px;
+    width: 60%;
+    background-image: url(../images/background/easy_button.png);
+}
+
 /* Pure tags */
 
 html, body {
@@ -212,8 +241,13 @@ button {
     margin: 0 auto;
     margin-bottom: 10px;
     font-size: 15px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-image: url(../images/background/button.png);
+    background-size: cover;
     color: #fff;
+}
+
+button:hover {
+    border: 2px solid #fff;
 }
 
 h1 {
