--- a/redirect/Scuola/TPSI/Tris/static/css/tris.css
+++ b/redirect/Scuola/TPSI/Tris/static/css/tris.css
@@ -56,7 +56,7 @@
     left: 0;
     background-image: url(../images/background/background.jpg);
     background-size: cover;
-    display: flex;
+    display: none;
     justify-content: center;
     flex-direction: column;
     align-items: center;
