--- a/redirect/Scuola/TPSI/Tris/static/css/tris.css
+++ b/redirect/Scuola/TPSI/Tris/static/css/tris.css
@@ -13,17 +13,23 @@
     background-image: url(../images/background/nether.png);
     background-position: center;
     background-size: cover;
-    filter: blur(0px);
     z-index: 1;
     width: 100%;
     height: 100vh;
     position: relative;
-    filter: blur(4px);
+}
+
+.blur::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(4px);
 }
 
 .width-414 {
     width: 414px;
-    height: 100vh;
+    height: 95vh;
     background-image: url(../images/background/nether.png);
     background-position: center;
     background-size: cover;
@@ -33,10 +39,14 @@
     top: 0;
     left: 0;
     right: 0;
-    margin: 0 auto;    
+    bottom: 0;
+    margin: auto auto;    
     z-index: 130;
-    -webkit-box-shadow: 1px 1px 11px 2px #fff; 
-    box-shadow: 1px 1px 11px 2px #fff;
+    border-radius: 10px;  
+    overflow: hidden;  
+    -webkit-box-shadow: 0px 0px 31px 32px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 31px 32px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 31px 32px rgba(0,0,0,0.75);
 }
 
 /* .background-rotation {
@@ -368,8 +378,7 @@ input[type=range]::-moz-range-thumb {
     width: 13px;
     height: 26px;
     background-image: url(../images/background/respawn-anchor.png);
-    background-size: cover;
-    
+    background-size: cover;    
     cursor: pointer;
 }
 
