--- a/redirect/Scuola/TPSI/Tris/static/css/tris.css
+++ b/redirect/Scuola/TPSI/Tris/static/css/tris.css
@@ -28,7 +28,7 @@
 }
 
 .width-414 {
-    width: 414px;
+    width: 28.75%;
     height: 95vh;
     background-image: url(../images/background/nether.png);
     background-position: center;
@@ -393,3 +393,15 @@ input[type=range]::-ms-track {
 }
   
   
+@media screen and (max-width: 1000px) {
+    .width-414 {
+        width: 414px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .width-414 {
+        width: 100%;
+        height: 100vh;
+    }
+}
