--- a/redirect/Scuola/TPSI/Tris/static/css/tris.css
+++ b/redirect/Scuola/TPSI/Tris/static/css/tris.css
@@ -133,6 +133,7 @@
     border: 3px solid #000;
     text-align: center;    
     background-size: cover;
+    background-position: center;
     -webkit-box-shadow: 0px 0px 14px 1px #000000; 
     box-shadow: 0px 0px 14px 1px #000000;
     position: relative;
@@ -183,8 +184,8 @@
     margin-top: 8%;
 }
 
-.overworld, .nether {
-    width: 40%;
+.overworld, .nether, .end {
+    width: 30%;
     height: 100%;
     color: #fff;
     text-align: center;
@@ -193,7 +194,7 @@
     transition: all .2s;
 }
 
-.overworld:hover, .nether:hover {  
+.overworld:hover, .nether:hover, .end:hover {  
     border: 2px solid #fff;
     cursor: pointer;
 }
@@ -212,6 +213,10 @@
 
 .nether-icon {
     background-image: url(../images/icon/nether.png);
+}
+
+.end-icon {
+    background-image: url(../images/icon/end.png);
 }
 
 .show-hide {
@@ -275,6 +280,10 @@
 
 .discord {
     background-image: url(../images/social/discord.svg);
+}
+
+.github:hover, .discord:hover {
+    cursor: pointer;
 }
 
 #sp {
