--- a/redirect/Scuola/Informatica/StudioDentistico/src/main/resources/com/gabbo/studiodentistico/AddPatient.fxml
+++ b/redirect/Scuola/Informatica/StudioDentistico/src/main/resources/com/gabbo/studiodentistico/AddPatient.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane fx:id="status" prefHeight="768" prefWidth="1024" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gabbo.studiodentistico.AddPatientController">
+<Pane fx:id="status" prefHeight="470" prefWidth="768" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.gabbo.studiodentistico.AddPatientController">
    <children>
       <Label layoutX="57.0" layoutY="55.0" prefHeight="7.0" prefWidth="208.0" text="Aggiungi un paziente">
          <font>
