--- a/redirect/Scuola/Informatica/StudioDentistico/src/main/resources/com/gabbo/studiodentistico/MainWindow.fxml
+++ b/redirect/Scuola/Informatica/StudioDentistico/src/main/resources/com/gabbo/studiodentistico/MainWindow.fxml
@@ -3,28 +3,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane prefHeight="768" prefWidth="1024" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gabbo.studiodentistico.MainController">
+<Pane prefHeight="470" prefWidth="768" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gabbo.studiodentistico.MainController">
    <children>
-      <MenuBar fx:id="menubar" prefHeight="25.0" prefWidth="1024.0">
+      <MenuBar fx:id="menubar" prefHeight="25.0" prefWidth="768.0">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
           <Menu mnemonicParsing="false" text="Studio">
             <items>
               <MenuItem fx:id="AddPatient" onAction="#switchScene" text="Aggiungi paziente" />
                 <MenuItem mnemonicParsing="false" onAction="#getPatients" text="Visualizza pazienti" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
         </menus>
       </MenuBar>
+      <Pane fx:id="mainWindow" layoutY="25.0" prefHeight="452.0" prefWidth="768.0" />
    </children>
 </Pane>
