--- a/redirect/Scuola/TPSI/WhichFoodAreYou/src/components/QuestionBox/QuestionsBox.css
+++ b/redirect/Scuola/TPSI/WhichFoodAreYou/src/components/QuestionBox/QuestionsBox.css
@@ -78,6 +78,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #fff;
 }
 
 .submit-answers button {
