--- a/redirect/Scuola/TPSI/WhichFoodAreYou/React/src/components/QuestionBox/QuestionsBox.css
+++ b/redirect/Scuola/TPSI/WhichFoodAreYou/React/src/components/QuestionBox/QuestionsBox.css
@@ -134,6 +134,11 @@ label {
     top: 0;
 }
 
+h1 {
+    color: #fff;
+    margin: 10px 20px;
+}
+
 .which-centered {
     position: absolute;
     top: 50%;
